Spring cloud sleuth and zipkin implementation.

--- a/microservice/docker-compose.yml
+++ b/microservice/docker-compose.yml
@@ -28,6 +28,12 @@ services:
     networks:
       - postgres
 
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
 networks:
   postgres:
     driver: bridge
